--- a/Uber-Clone/package.json
+++ b/Uber-Clone/package.json
@@ -9,15 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^2.2.5",
-    "expo": "~51.0.13",
+    "expo": "^51.0.13",
     "expo-status-bar": "~1.12.1",
+    "install": "^0.13.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-redux": "^9.1.2"
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-redux": "^9.1.2",
+    "twrnc": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
