--- a/Uber-Clone/package.json
+++ b/Uber-Clone/package.json
@@ -9,16 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "^51.0.13",
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "^0.19.12",
     "react-redux": "^9.1.2",
     "twrnc": "^4.2.0"
   },
