--- a/Uber-Clone/package.json
+++ b/Uber-Clone/package.json
@@ -22,8 +22,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
